dhall/tests/type-errors/unit/NonRecordToMap.txt
Type error: error: The argument to `toMap` must be a record
 --> <current file>:1:0
  |
1 | toMap "text"
  | ^^^^^^^^^^^^ The argument to `toMap` must be a record
  |
